--- a/package.json
+++ b/package.json
@@ -13,14 +13,16 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
+    "serve": "^14.2.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "npm run dev",
-    "start:prod": "npm run prod",
-    "dev": "concurrently \"npm run server\" \"react-scripts start\"",
-    "prod": "concurrently \"npm run server\" \"react-scripts build && serve -s build\"",
-    "server": "json-server --watch db.json --port 5000"
+    "build": "react-scripts build",
+    "start": "concurrently \"npm run server\" \"serve -s build\"",
+    "server": "json-server --watch db.json --port $PORT",
+    "local": "concurrently \"npm run server:local\" \"react-scripts start\"",
+    "server:local": "json-server --watch db.json --port 5000",
+    "heroku-postbuild": "npm run build"
   },
   "eslintConfig": {
     "extends": [
