created backend for expose json-server and proxy mailtrap

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Task Manager",
-  "name": "Task Manager Ap",
+  "name": "Task Manager",
   "icons": [
     {
       "src": "favicon.ico",
