--- a/package.json
+++ b/package.json
@@ -1,28 +1,46 @@
 {
-  "name": "task-manager-app",
+  "name": "task-manager-heroku",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
+  "scripts": {
+    "build": "react-scripts build",
+    "start": "node server.mjs",
+    "local": "concurrently \"npm run server:local\" \"react-scripts start\"",
+    "server:local": "node server.mjs",
+    "heroku-postbuild": "npm run build"
+  },
   "dependencies": {
+    "@ant-design/icons": "^5.4.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "antd": "^5.20.3",
     "axios": "^1.7.6",
-    "moment": "^2.30.1",
+    "cors": "^2.8.5",
+    "dayjs": "^1.11.13",
+    "express": "^4.19.2",
+    "json-server": "^0.17.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "serve": "^14.2.3",
-    "web-vitals": "^2.1.4"
+    "uuid": "^10.0.0",
+    "web-vitals": "^2.1.4",
+    "webpack-dev-server": "^5.1.0"
   },
-  "scripts": {
-    "build": "react-scripts build",
-    "start": "concurrently \"npm run server\" \"serve -s build\"",
-    "server": "json-server --watch db.json --port $PORT",
-    "local": "concurrently \"npm run server:local\" \"react-scripts start\"",
-    "server:local": "json-server --watch db.json --port 5000",
-    "heroku-postbuild": "npm run build"
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "autoprefixer": "^10.4.20",
+    "concurrently": "^8.2.2",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.35.0",
+    "postcss": "^8.4.41",
+    "prettier": "^3.3.3",
+    "tailwindcss": "^3.4.10"
   },
   "eslintConfig": {
     "extends": [
@@ -41,19 +59,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "autoprefixer": "^10.4.20",
-    "concurrently": "^8.2.2",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react": "^7.35.0",
-    "json-server": "^1.0.0-beta.2",
-    "postcss": "^8.4.41",
-    "prettier": "^3.3.3",
-    "tailwindcss": "^3.4.10"
-  },
-  "proxy": "https://sandbox.api.mailtrap.io"
+  }
 }
